...
 */
export const SearchBar = observer(function SearchBar(props: SearchBarProps) {
  const { keyword, data } = props

  return (
    <View style={$container}>
      <Pressable style={$searchContainer} testID="search-box" onPress={() => navigate("AutoComplete")}>
        <View style={$search}>
          <Pressable onPress={() => goBack()}>
            {Platform.OS === "ios" ? (
              <Ionicons name="chevron-back" size={28} style={$searchIcon} />
            ) : (
              <Ionicons name="arrow-back" size={28} style={$searchIcon} />
...
